@@ -20,6 +20,8 @@
  - Updated tests.
 2022-01-25
  - Added show-tokens option to the search API.
+2022-01-31
+ - Added an API retrieving fields of a virtual corpus.
 
 # version 0.64.1
 
