@@ -12,6 +12,8 @@
  - Bumped spring.version from 5.3.13 to 5.3.14
 2022-01-25
  - Added show-tokens option to the search API.
+2022-01-31
+ - Added an API retrieving fields of a virtual corpus.
 
 # version 0.64
 
